On changes les méthodes avec la logique dans la couche de service. On ajoute la doc. On ajoutes les constructeurs des classes metiers pour jackson.